--- a/package.json
+++ b/package.json
@@ -8,24 +8,28 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TarasBurdeniuk/step_2.git"
+    "url": "git+https://gitlab.com/TarasBurdeniuk/step2_forkio.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/TarasBurdeniuk/step_2/issues"
+    "url": "https://gitlab.com/TarasBurdeniuk/step2_forkio/issues"
   },
-  "homepage": "https://github.com/TarasBurdeniuk/step_2#readme",
+  "homepage": "https://gitlab.com/TarasBurdeniuk/step2_forkio#readme",
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
     "browser-sync": "^2.26.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^5.0.3",
-    "gulp-js-minify": "0.0.3",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
+    "gulp-sequence": "^1.0.0",
     "gulp-uglify": "^3.0.1",
     "node-sass": "^4.11.0",
     "pump": "^3.0.0"
